[MODORDERS-1269] Remove alerts and reporting codes, single po line schema (#1108)